[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/OQ_Toolkit/OQ_UI2D/theme/oq_ui2d_standard.theme" type="Theme" id=1]
[ext_resource path="res://addons/OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/OQ_Toolkit/OQ_UI2D/scripts/OQ_UI2DVRSettings.gd" type="Script" id=3]


[node name="OQ_UI2DVRSettings" type="Spatial"]
script = ExtResource( 3 )

[node name="OQ_UI2DCanvas" parent="." instance=ExtResource( 2 )]

[node name="ReferenceRect" type="ReferenceRect" parent="OQ_UI2DCanvas"]
visible = false
margin_right = 512.0
margin_bottom = 512.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title_Label" type="Label" parent="OQ_UI2DCanvas/ReferenceRect"]
margin_right = 512.0
margin_bottom = 48.0
text = "VR Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoveationLevel_Label" type="Label" parent="OQ_UI2DCanvas/ReferenceRect"]
margin_left = 16.0
margin_top = 64.0
margin_right = 240.0
margin_bottom = 112.0
text = "Foveation Level:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoveationLevel_OptionButton" type="OptionButton" parent="OQ_UI2DCanvas/ReferenceRect/FoveationLevel_Label"]
margin_left = 240.0
margin_right = 480.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPDInfo_Label" type="Label" parent="OQ_UI2DCanvas/ReferenceRect"]
margin_left = 16.0
margin_top = 320.0
margin_right = 240.0
margin_bottom = 368.0
text = "Current IPD:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExtraLatency_Label" type="Label" parent="OQ_UI2DCanvas/ReferenceRect"]
margin_left = 16.0
margin_top = 128.0
margin_right = 240.0
margin_bottom = 176.0
text = "Extra Latency"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExtraLatency_OptionButton" type="OptionButton" parent="OQ_UI2DCanvas/ReferenceRect/ExtraLatency_Label"]
margin_left = 240.0
margin_right = 480.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrackingSpace_Label" type="Label" parent="OQ_UI2DCanvas/ReferenceRect"]
margin_left = 16.0
margin_top = 192.0
margin_right = 240.0
margin_bottom = 240.0
text = "Tracking Space:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrackingSpace_OptionButton" type="OptionButton" parent="OQ_UI2DCanvas/ReferenceRect/TrackingSpace_Label"]
margin_left = 240.0
margin_right = 480.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoundaryVisible_Label" type="Label" parent="OQ_UI2DCanvas/ReferenceRect"]
margin_left = 16.0
margin_top = 256.0
margin_right = 240.0
margin_bottom = 304.0
text = "Boundary Visible:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoundaryVisible_CheckButton" type="CheckButton" parent="OQ_UI2DCanvas/ReferenceRect/BoundaryVisible_Label"]
margin_left = 240.0
margin_right = 316.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="OQ_UI2DCanvas/ReferenceRect/FoveationLevel_Label/FoveationLevel_OptionButton" to="." method="_on_FoveationLevel_OptionButton_item_selected"]
[connection signal="item_selected" from="OQ_UI2DCanvas/ReferenceRect/ExtraLatency_Label/ExtraLatency_OptionButton" to="." method="_on_ExtraLatency_OptionButton_item_selected"]
[connection signal="item_selected" from="OQ_UI2DCanvas/ReferenceRect/TrackingSpace_Label/TrackingSpace_OptionButton" to="." method="_on_TrackingSpace_OptionButton_item_selected"]
[connection signal="toggled" from="OQ_UI2DCanvas/ReferenceRect/BoundaryVisible_Label/BoundaryVisible_CheckButton" to="." method="_on_BoundaryVisible_CheckButton_toggled"]
